made adjustments for VM and Visual Studio